Added four further UX evaluation scales

--- a/ui.html
+++ b/ui.html
@@ -133,6 +133,11 @@ form label span {
         <option value="pbi">Perspective-Based Inspection</option>
         <option value="hedut">Hedonic Utility Scale (HED/UT)</option>
         <option value="pas">Product Attachment Scale</option>
+        <option value="spacer">—</option>
+        <option value="visawi">Visual Aesthetics of Websites Inventory (VisAWI)</option>
+        <option value="suprq">Standardized User Experience Percentile Rank Questionnaire (SUPR-Q)</option>
+        <option value="nps">Net Promoter Score (NPS)</option>
+        <option value="smeq">Subjective Mental Effort Questionnaire (SMEQ)</option>
       </select>
 
       <label for="count">Amount of Participants</label>
