Added the UEQ-S

--- a/ui.html
+++ b/ui.html
@@ -129,6 +129,7 @@ form label span {
         <option value="tam">Technology Acceptance Model (TAM)</option>
         <option value="sus">System Usability Scale (SUS)</option>
         <option value="ueq">User Experience Questionnaire (UEQ)</option>
+        <option value="ueqs">Short User Experience Questionnaire (UEQ-S)</option>
         <option value="ad">AttrakDiff</option>
         <option value="pbi">Perspective-Based Inspection</option>
         <option value="hedut">Hedonic Utility Scale (HED/UT)</option>
